--- a/admin-app/src/assets/style.css
+++ b/admin-app/src/assets/style.css
@@ -75,7 +75,7 @@
   padding: 20px;
   border-radius: 8px;
   width: 600px;
-  max-height: 90vh; 
+  max-height: 110vh; 
   /* overflow-y: auto;  */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
@@ -90,9 +90,9 @@
   cursor: pointer;
 }
 .react-quill-container {
-  height: 700px; /* Chiều cao cố định cho ReactQuill */
-  overflow-y: auto; /* Kích hoạt cuộn dọc */
-  border: 1px solid #ddd; /* Tùy chọn, để thêm viền */
+  height: 700px; 
+  overflow-y: auto;
+  border: 1px solid #ddd;
   border-radius: 8px;
 }
 .modal-order {
